[project]
name = "gaia-actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "astropy>=7.1.1",
    "gala @ git+https://github.com/adrn/gala.git",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyia>=1.4.1",
    "threadpoolctl>=3.6.0",
]
